# BabySafe

./: .gitignore  README.md  config.yml  pyproject.toml  setup.sh
src/: main.py
src/classes/: depth.py  detect.py  scorer.py  segment.py
src/configs/: config.py
